# OpenSRE-Autonomous-DevOps-Agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.py  docker-compose.yml  main.py  observability.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: graph.py  guardrails.py  metrics.py  nodes.py  state.py
grafana/dashboards/: opensre.json
grafana/provisioning/dashboards/: dashboards.yml
llm/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
monitors/: base.py  cpu.py  database.py  kubernetes.py
notifications/: __init__.py  discord_notifier.py  dispatcher.py  slack_bot.py  telegram_notifier.py  whatsapp_notifier.py
storage/: incidents.py
tests/: conftest.py  test_agent.py  test_config.py  test_features.py  test_graph.py  test_llm.py  test_monitors.py  test_notifications.py
tools/: aws_tools.py  db_tools.py  k8s_tools.py
