[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opensre"
version = "1.3.0"
description = "OpenSRE — an autonomous AI Site Reliability Engineer that detects incidents, performs Claude-powered root cause analysis, and remediates with human-in-the-loop approval."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Moguloju Sai", email = "sai.moguloju@elisiontec.com" }]
keywords = ["sre", "devops", "ai-agent", "langgraph", "anthropic", "claude", "observability", "incident-response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Saimoguloju/OpenSRE-Autonomous-DevOps-Agent"
Repository = "https://github.com/Saimoguloju/OpenSRE-Autonomous-DevOps-Agent"
Issues = "https://github.com/Saimoguloju/OpenSRE-Autonomous-DevOps-Agent/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "venv|\\.venv"

[tool.pytest.ini_options]
# Async coroutines are driven explicitly with asyncio.run() in the tests, so no
# async pytest plugin is required to run the suite.
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
omit = ["tests/*", "venv/*", "*/__pycache__/*"]
